[package]
name = "ember-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
crossbeam = "0.8.4"
dotenv = "0.15.0"
env_logger = "0.11.3"
ethnum = "1.5.0"
log = "0.4.21"
rand = "0.8.5"
ring = "0.17.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
toml = "0.8.12"
