[package]
name = "ember-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
crossbeam = "0.8.4"
dotenv = "0.15.0"
env_logger = "0.11.3"
ethnum = "1.5.0"
hex = "0.4.3"
http = "1.1.0"
log = "0.4.21"
prost = "0.12.4"
prost-build = "0.12.4"
rand = "0.8.5"
ring = "0.17.8"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
tonic = "0.11.0"
tonic-build = "0.11.0"

[build-dependencies]
prost-build = "0.12.4"
tonic-build = "0.11.0"
